# otdistfunc

./: AUTHORS  CMakeLists.txt  VERSION
distro/debian/: changelog  control  rules
distro/rpm/: otdistfunc.spec
distro/windows/: Makefile  README.txt  installer.nsi
doc/: CMakeLists.txt  GenericInformation.tex.in  OTDistFunc_Documentation.sty  OTDistFunc_Documentation.tex  OTDistFunc_ExamplesGuide.tex  OTDistFunc_ReferenceGuide.tex  OTDistFunc_UseCasesGuide.tex  OTDistFunc_UserManual.tex  OTDistFunc_summary.tex  OTDistFunc_title.tex
doc/figures/: distributed_wrapper_cluster.dia  distributed_wrapper_hosts.dia  distributed_wrapper_localhost.dia
python/src/: CMakeLists.txt  DistributedPythonFunction.py  __init__.py  core_dispatcher.py  core_dispatcher_launcher.py  distributed_wrapper.py  host_dispatcher.py  remote_communicator.py  wrapper_data.py  wrapper_launcher.py
python/test/: CMakeLists.txt  dummy_func_wrapper.py  dummy_program.py  dummy_program_wrapper.py  t_distributed_python_wrapper.py  t_distributed_python_wrapper_std.py  t_distributed_python_wrapper_template.py  t_remote_communicator.py  t_wrapper_data.expout  t_wrapper_data.py
python/test/wrapper_python_distributed/: README.txt  ot_script.py  start_it.bat  start_it.sh
